# ollama

./: .gitignore  README.md  app.py  pyproject.toml
deepseek/: README.md  deepseek.py  deepseek_chunk.py  deepseek_response.txt
fastapi_with_llm/: .env  ai_response.txt  api_prompt_llm.py  main.py  test_api.py
llama/: 1_llama_basic.py  2_llama_save_to_text.py  3_llama_stream.py  4_llama_custom_client.py  5_llama_async_client.py  llama.py  llama_response.txt
llm-fastapi/: README.md  ai_response.txt  api_prompt_llm.py  main.py
llm-structured-outputs/: README.md  financial_sentiment_analysis.py
llm-summarize-document/: README.md  llm_summarize_document.py
llm-summarize-document/output_rag/: langchain_demo_rag_answer.txt  sample_rag_answer.txt  summaries.xlsx
streamlit/: README.md  streamlit_ollama_chat.py  streamlit_ollama_chat_stream.py  streamlit_ollama_custom_client_stream.py  streamlit_ollama_llm.py  streamlit_ollama_llm_streaming.py
