[project]
name = "webchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gnews>=0.4.1",
    "ollama>=0.4.7",
    "openpyxl>=3.1.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
]
